--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "buildCommand": "pnpm build",
+  "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "installCommand": "pnpm install",
-  "devCommand": "pnpm dev",
+  "installCommand": "npm install",
+  "devCommand": "npm run dev",
   "functions": {
     "src/app/api/**/*.ts": {
       "maxDuration": 30
