Add environment configuration files and gitignore

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,8 +4,8 @@ DATABASE_URL=postgresql://postgres:5822075Mahmoud94$@db.texpqawynofaoppwsdzn.sup
 # Spotify API
 SPOTIFY_CLIENT_ID=67a547dce176463b830c7d5a9793104a
 SPOTIFY_CLIENT_SECRET=5242e2b22d9e4f389ac3491bcb218538
-SPOTIFY_REDIRECT_URI=https://sunday-tracker.vercel.app/api/oauth/callback
+SPOTIFY_REDIRECT_URI=http://localhost:3000/api/oauth/callback
 
 # App Configuration
-APP_BASE_URL=https://sunday-tracker.vercel.app
+APP_BASE_URL=http://localhost:3000
 CRON_KEY=H68jNpVOanLxDzpQ9NsWIgzu1rCqGmkvUrst31Y3S78WfDBcZd
